feat: input function

--- a/笔记.md
+++ b/笔记.md
@@ -43,6 +43,7 @@ fp.close()  # 关闭文件
 ```
 
 6. 多个print输出到一行显示
+
 ```python
 print('Hello', end='--->')
 print('World')
@@ -50,8 +51,31 @@ print('World')
 ```
 
 7. 使用连接符连接多个字符串
+
 ```python
 print(1, 3, 1, 4)  # 1 3 1 4
 print(192, 168, 0, 0, sep='.')  # 192.168.0.0
+```
+
+## 基本的输入和输出
+
+### 基本的输入函数input
+
+`variable = input('提示文字')`
+
+> 注意
+>
+> 无论用户输入的是字符串还是数字，input()函数统一按照字符串类型输出
+
+想要接收整型的数字并保存到变量num中
+
+```python
+num = int(input('请输入你的年龄：'))
+```
+
+```python
+name = input('请输入你的姓名：')
+age = int(input('请输入你的年龄：'))
+print('你的名字是：' + name, '你的年龄是：' + str(age))
 ```
 
