--- a/笔记.md
+++ b/笔记.md
@@ -5,6 +5,25 @@ IPO(Input Process Output)程序编写方法
 每个计算机程序都用来解决特定的计算问题。每个程序都有统一的运算模式：
 输入数据、处理数据和输出数据。
 
+## 注释
+
+```python
+# 这是单行注释
+
+'''
+这是
+多行注释
+'''
+
+"""
+这也是
+多行注释
+"""
+
+# 中文声明注释
+# coding:utf-8
+```
+
 ## print函数
 
 1. 使用print函数进行简单输出
