--- a/笔记.md
+++ b/笔记.md
@@ -1,5 +1,9 @@
 # Python
 
+Python是一种**解释**类型的语言。
+
+Python通过**缩进**来体现语句之间的逻辑关系。
+
 IPO(Input Process Output)程序编写方法
 
 每个计算机程序都用来解决特定的计算问题。每个程序都有统一的运算模式：
@@ -95,6 +99,8 @@ num = int(input('请输入你的年龄：'))
 ```python
 name = input('请输入你的姓名：')
 age = int(input('请输入你的年龄：'))
-print('你的名字是：' + name, '你的年龄是：' + str(age))
+print('----自我介绍----')
+print('姓名：' + name)
+print('年龄：' + str(age))
 ```
 
