--- a/学习笔记/笔记.md
+++ b/学习笔记/笔记.md
@@ -104,3 +104,13 @@ print('姓名：' + name)
 print('年龄：' + str(age))
 ```
 
+## 保留字
+
+查看保留字
+
+```python
+import keyword
+
+print(keyword.kwlist)
+# ['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']
+```
