--- a/学习笔记/笔记.md
+++ b/学习笔记/笔记.md
@@ -136,3 +136,34 @@ print(keyword.kwlist)
 - 常量命名时米用全部大写字母，可以使用下划线
 - 使用单下划线“_”开头的模块变量或函数是受保护的，在使用“from xxx import*”语句从模块中导入时，这些模块变量或函数不能被导入
 - 使用双下划线“_”开头的实例变量或方法是类私有的以双下划线开头和结尾的是Python的专用标识，例如:`__init__()`表示初始化函数
+
+## 变量
+
+定义：`变量名 = value`
+
+Python是一种动态类型的语言，变量的类型可以随时变化
+
+- 使用内置函数`type()`可以查看变量的数据类型
+
+```python
+age = 15
+print(type(age))  # <class 'int'>
+
+age = '12'
+print(type(age))  # <class 'str'>
+```
+
+允许多个变量指向同一个值。
+
+- 使用内置函数`id()`可以返回变量所指的内存地址
+
+```python
+# 多个变量指向同一个值
+age = age1 = 12
+print(id(age))  # 2092095898192
+print(id(age1))  # 2092095898192
+
+name = '张三'
+print(id(name))  # 2300219712080
+```
+
